--- a/Project/LoftParketta/shopping_cart/templates/cart.html
+++ b/Project/LoftParketta/shopping_cart/templates/cart.html
@@ -138,6 +138,7 @@
               <a href="{% url 'shopping_cart:payment' %}" class="btn btn-success w-100 shadow-0 mb-2"> Fizetés <i class="fa-solid fa-arrow-right"></i></a>
               <a href="{% url 'shopping_cart:quote_request' %}" class="btn btn-dark w-100 border mt-2"> Árajánlat kérés </a>
               <a href="{% url 'shopping_cart:payment' %}" class="btn btn-light w-100 border mt-2"><i class="fa-solid fa-arrow-left"></i> Vásárlás folytatása </a>
+              <img src="{% static 'image/barion.png' %}" style="width: 100%" alt="Barion">
             </div>
           </div>
         </div>
