--- a/Project/LoftParketta/shop/templates/base.html
+++ b/Project/LoftParketta/shop/templates/base.html
@@ -34,77 +34,68 @@
   </div>
   <div class="row">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: rgba(255, 255, 255, 1) !important;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="{% static 'image/nav/logo.png' %}" alt="Logo" width="95" height="79">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link {% if actual_page == 'home'%} active {% endif %}" href="{% url 'shop:home' %}">Kezdőlap</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if actual_page == 'products'%} active {% endif %}" href="{% url 'shop:products' %}">Termékek</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if actual_page == 'products_discounted'%} active {% endif %}" href="{% url 'shop:products' %}?order_by=discounted">Akciók</a>
-            </li>
-<!--            <li class="nav-item">-->
-<!--              <a class="nav-link {% if actual_page == 'news'%} active {% endif %}" href="#">Hírek</a>-->
-<!--            </li>-->
-          </ul>
-          <div class="d-flex ms-auto">
-            <form class="d-flex me-3" role="search" method="GET" action="{% url 'shop:search' %}">
-              <input class="form-control me-2" type="search" name="q" placeholder="Keresés" aria-label="Keresés" required>
-              <button class="btn btn-outline-success" type="submit">
-                <i class="fas fa-search"></i>
-              </button>
-            </form>
-            {% if user.is_authenticated %}
-              <ul class="nav navbar-nav my-2 my-lg-0" style="margin-left: auto;">
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'users:logout' %}">
-                    <i class="fas fa-sign-out-alt" style="color: #74C0FC;"></i>
-                  </a>
-                </li>
-              </ul>
-            {% else %}
-              <ul class="nav navbar-nav my-2 my-lg-0" style="margin-left: auto;">
-                <li class="nav-item {% if actual_page == 'login'%} active {% endif %}">
-                  <a class="nav-link" href="{% url 'users:login' %}">Bejelentkezés</a>
-                </li>
-              </ul>
-            {% endif %}
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'cart:view_cart' %}">
-                  <i class="fas fa-shopping-cart" style="color: #74C0FC;"></i>
-                  <span id="cart-count" class="rounded-circle">{{ cart_count }}</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="{% static 'image/nav/logo.png' %}" alt="Logo" width="95" height="79">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link {% if actual_page == 'home' %}active{% endif %}" href="{% url 'shop:home' %}">Kezdőlap</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if actual_page == 'products' %}active{% endif %}" href="{% url 'shop:products' %}">Termékek</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if actual_page == 'products_discounted' %}active{% endif %}" href="{% url 'shop:products' %}?order_by=discounted">Akciók</a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav my-2 my-lg-0" style="margin-left: auto;">
+        <li class="nav-item">
+          <form class="d-flex" role="search" method="GET" action="{% url 'shop:search' %}">
+            <input class="form-control me-2" type="search" name="q" placeholder="Keresés" aria-label="Keresés" required>
+            <button class="btn btn-outline-success" type="submit">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
+        </li>
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'users:logout' %}">
+              <i class="fas fa-sign-out-alt" style="color: #74C0FC;"></i>
+            </a>
+          </li>
+        {% else %}
+          <li class="nav-item {% if actual_page == 'login' %}active{% endif %}">
+            <a class="nav-link" href="{% url 'users:login' %}">Bejelentkezés</a>
+          </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'cart:view_cart' %}">
+            <i class="fas fa-shopping-cart" style="color: #74C0FC;"></i>
+            <span id="cart-count" class="rounded-circle">{{ cart_count }}</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
   </div>
 </div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      var navbarHeight = document.getElementById("mynavbar").offsetHeight;
-      document.body.style.paddingTop = navbarHeight + "px";
-    });
-  </script>
+
 
 
     <!-- Tartalom -->
     <div class="container-fluid" style="
     padding-left: 0px;
     padding-right: 0px;
+    padding-top: 13vh;
 ">
         {% block content %}
         <!-- A page-specific content will go here -->
