--- a/Project/LoftParketta/shop/static/css/popular_products.css
+++ b/Project/LoftParketta/shop/static/css/popular_products.css
@@ -27,7 +27,59 @@
     object-fit: contain; /* Ensure image fits within the container */
     object-position: center;
 }
-
+.product-image figure {
+	position: relative;
+}
+.product-image div::before {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 2;
+	display: block;
+	content: '';
+	width: 0;
+	height: 0;
+	background: rgba(255,255,255,.2);
+	border-radius: 100%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	opacity: 0;
+}
+.img_body{
+    height: 300px;
+    overflow: hidden;
+    position: relative;
+}
+.product-image div:hover::before {
+	-webkit-animation: circle .75s;
+	animation: circle .75s;
+}
+@-webkit-keyframes circle {
+	0% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 1;
+	}
+	100% {
+		width: 200%;
+		height: 200%;
+		opacity: 0;
+	}
+}
+@keyframes circle {
+	0% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 1;
+	}
+	100% {
+		width: 200%;
+		height: 200%;
+		opacity: 0;
+	}
+}
 .price-info {
     margin-top: auto; /* Push price-info to the bottom */
     text-align: start; !important; /* Align text to the end */
@@ -82,6 +134,10 @@
     color: red !important;
 }
 
+#sidebar-container{
+display: block;
+}
+
 
 .swiper-slide {
     height: 100%; /* Az összes slide egyforma magasságú legyen */
@@ -89,3 +145,17 @@
     display: flex;
     justify-content: center;
 }
+
+.ribbon {
+    position: absolute;
+    width: 120px;
+    height: 30px;
+    background: #28a745; /* Zöld szín */
+    color: white;
+    text-align: center;
+    line-height: 30px;
+    font-size: 14px;
+    font-weight: bold;
+    box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.2); /* Árnyék a beolvadáshoz */
+}
+
