--- a/Project/LoftParketta/shop/static/css/product_detail.css
+++ b/Project/LoftParketta/shop/static/css/product_detail.css
@@ -59,3 +59,15 @@ ul{
  .tab-content .mt-5 {
  margin-top: 1px !important;
  }
+
+ /* Rotate */
+.hover06 figure img {
+	-webkit-transform: rotate(15deg) scale(1.4);
+	transform: rotate(15deg) scale(1.4);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.hover06 figure:hover img {
+	-webkit-transform: rotate(0) scale(1);
+	transform: rotate(0) scale(1);
+}
